Fixed some layout issues with the pdf generator.

--- a/src/main/resources/static/resources/css/style.css
+++ b/src/main/resources/static/resources/css/style.css
@@ -379,11 +379,11 @@ select {
 .result-bar {
   position: left;
   background-color: black;
+  border: solid 1px black;
   height: 1rem;
   margin: 0.5rem 0rem;
 }
 .result-bar:first-of-type {
-  border-top: 0;
   margin-top: 0.25rem;
   margin-bottom: 0.5rem;
 }
